--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-World from index.html
+<!DOCTYPE html>
+<html lang= "en">
+  <head>
+     <meta charset="utf-8">
+     <title>My First Bitstarter</title>
+     <link type="text/css" rel="stylesheet"
+           href="https://d396qusza40orc.cloudfront.net/startup%Fcode%Fbootstrap-2.3.2.css">
+     <style type="text/css">
+       body {
+         padding-top: 20px;
+         padding-bottom: 40px;
+       }
+       .container {
+         width: 960px;
+       }
+       p.lead {
+         padding-top: 15px;
+       }
+       .navigation, .pitch, .section1, .section2, .faq, .footer {
+         padding: 10px 0px 10px 0px;
+       }
+       .video, .thermometer, .order, .social {
+         border: 1px dotter;
+         text-align: center;
+       }
+       .video {
+         /* Internal border have 1px width, thus need to add 3x 1px to 120px */
+         height: 124px;
+         line-height: 124px;
+       }
+       .thermometer, .order, .social {
+         /* line-height to vertical center */
+         height: 40px;
+         line-height: 40x;
+       }
+       div.row {
+         border: 1px solid;
+       }
+     </style>
+  </head>
+  <body>
+     <div class = "container">
+        <div class = "row navigation">
+           <div class = "span2 logo">
+           Logo
+           </div>
+           <div class = "span6 blank">
+              Blank 
+           </div>
+           <if class = "span4 about"> /* Problem mussels need to be catched earlie
+             
