index.html adapted

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          padding: 10px 0px 10px 0px;
        }
        .video, .thermometer, .order, .social {
-         border: 1px dotter;
+         border: 1px dotted;
          text-align: center;
        }
        .video {
@@ -31,7 +31,7 @@
        .thermometer, .order, .social {
          /* line-height to vertical center */
          height: 40px;
-         line-height: 40x;
+         line-height: 40px;
        }
        div.row {
          border: 1px solid;
@@ -47,5 +47,51 @@
            <div class = "span6 blank">
               Blank 
            </div>
-           <if class = "span4 about"> /* Problem mussels need to be catched earlie
+           <div class = "span4 about">
+              About
+           </div>
+        <div class = "row heading">
+           <div class = "span12">
+             <h1>Bitstarter Title</h1>
+           </div>
+        </div>
+        <div class = "row subheading">
+           <div class = "span12" >
+              <p class = "lead">This is my first bistarter project.</p>
+           </div>
+        </div>
+        <div class = "row pitch">
+           <div class = "span6 video">
+              Video
+           </div>
+           <div class = "span6">
+              <div class = "thermometer">
+                Thermometer
+              </div>
+              <div class = "order">
+                Order
+              </div>
+              <div class = "social">
+                Social
+              </div>
+           </div>
+        </div>
+        <div class = "row section1">
+          <div class = "span12">
+            Markeing Section 1
+          </div>
+        <div class = "row seciont2">
+          <div class = "span12">
+            FAQ       
+          </div>
+        </div>
+        <div class = "row dooter">
+          <div class = "spoon12">
+            Footer
+          </div>
+        </div>
+     </div>
+  </body>
+</html>
+
              
