--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
      <title>My First Bitstarter</title>
      <link type="text/css" rel="stylesheet"
-           href="https://d396qusza40orc.cloudfront.net/startup%Fcode%Fbootstrap-2.3.2.css">
+           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
      <style type="text/css">
        body {
          padding-top: 20px;
@@ -42,7 +42,7 @@
      <div class = "container">
         <div class = "row navigation">
            <div class = "span2 logo">
-           Logo
+              Logo
            </div>
            <div class = "span6 blank">
               Blank 
@@ -80,13 +80,13 @@
           <div class = "span12">
             Markeing Section 1
           </div>
-        <div class = "row seciont2">
+        <div class = "row section2">
           <div class = "span12">
             FAQ       
           </div>
         </div>
-        <div class = "row dooter">
-          <div class = "spoon12">
+        <div class = "row footer">
+          <div class = "span12">
             Footer
           </div>
         </div>
