--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          text-align: center;
        }
        .video {
-         /* Internal border have 1px width, thus need to add 3x 1px to 120px */
+         /*  Internal border have 1px width, thus need to add 3x 1px to 120px  */
          height: 124px;
          line-height: 124px;
        }
@@ -57,7 +57,7 @@
         </div>
         <div class = "row subheading">
            <div class = "span12" >
-              <p class = "lead">This is my first bistarter project.</p>
+              <p class = "lead">This is my first bitstarter project.</p>
            </div>
         </div>
         <div class = "row pitch">
@@ -78,11 +78,16 @@
         </div>
         <div class = "row section1">
           <div class = "span12">
-            Markeing Section 1
+            Marketing Section 1
           </div>
         <div class = "row section2">
           <div class = "span12">
-            FAQ       
+            Marketing Section 2    
+          </div>
+        </div>
+        <div class = "row faq">
+          <div class = "span12">
+             FAQ
           </div>
         </div>
         <div class = "row footer">
