now, index.html is okay

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
          text-align: center;
        }
        .video {
-         /*  Internal border have 1px width, thus need to add 3x 1px to 120px  */
+         /* Internal border have 1px width, thus need to add 3x 1px to 120px  */
+         /* version 1 */
          height: 124px;
          line-height: 124px;
        }
@@ -50,6 +51,7 @@
            <div class = "span4 about">
               About
            </div>
+        </div>
         <div class = "row heading">
            <div class = "span12">
              <h1>Bitstarter Title</h1>
@@ -80,6 +82,7 @@
           <div class = "span12">
             Marketing Section 1
           </div>
+        </div>
         <div class = "row section2">
           <div class = "span12">
             Marketing Section 2    
