--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
      <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
      <style type="text/css">
        /* Large Desktops */
-       @media (min-width: 980px) {
+       @media (min-width: 980px)
+       {
          body {
            padding-top: 60px;
          }
@@ -17,10 +18,11 @@
          }
          .linediv-r {
            border-left: 1px white solid;
-         } 
+         }
        }
        /* Landscape phones and down: */
-       @media (max-width: 480px) {
+       @media (max-width: 480px)
+       {
          .copy {
            padding: 2.5% 10%;
          }
@@ -28,7 +30,7 @@
            border-bottom: 1px white solid;
          }
          .linediv-r {
-           border-top: 1px white sold;
+           border-top: 1px white solid;
          }
        }
        /* All form factors */
@@ -37,7 +39,7 @@
          font-family: 'Open Sans', Helvetica, Arial, sans-serif;
        }
        .heading, .subheading {
-         font-family: 'Ubuntu', Helvetica, Arial, sans-serif; 
+         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
          text-align: center;
        }
        p.lead {
@@ -45,26 +47,45 @@
          font-size: 24px;
          line-height: 30px;
        }
-       .navigation, .pitch, .section1, .section2, .faq, .footer {
-         padding: 10px 0px 10px 0px;
+       p {
+         padding-top: 18px;
+         line-height: 24px;
        }
-       .video, .thermometer, .order, .social {
-         border: 1px dotted;
+       /* Vide pitch and Action */
+       .pitch {
+         padding: 2.5% 0%;
+       }
+       .order {
+         padding: 2% 0%;
+       }
+       .actions {
+         background-color: #343434;
+         padding: 3% 0%
+       }
+       .video, .thermometer, .order, .social, .statistics {
          text-align: center;
        }
-       .video {
-         /* Internal border have 1px width, thus need to add 3x 1px to 120px  */
-         /* version 1 */
-         height: 124px;
-         line-height: 124px;
+       .statistics h3, .statistics p {
+         color: white;
        }
-       .thermometer, .order, .social {
-         /* line-height to vertical center */
-         height: 40px;
-         line-height: 40px;
+       /* Marketing Copy and Footer: */
+       .copy {
+         padding-top: 2.5%;
+         padding-bottom: 2.5%;
+         text-align: justify;
        }
-       div.row {
-         border: 1px solid;
+       .asset {
+         padding: 2.5% 0%;
+       }
+       .footer {
+         color: #cccccc;
+         text-align: center;
+       }
+       .footer p {
+         font-size: 11px;
+       }
+       .footer a {
+         color: #ccccff;
        }
      </style>
   </head>
@@ -75,7 +96,7 @@
               Logo
            </div>
            <div class = "span6 blank">
-              Blank 
+              Blank
            </div>
            <div class = "span4 about">
               About
@@ -114,7 +135,7 @@
         </div>
         <div class = "row section2">
           <div class = "span12">
-            Marketing Section 2    
+            Marketing Section 2
           </div>
         </div>
         <div class = "row faq">
@@ -131,4 +152,4 @@
   </body>
 </html>
 
-             
+
