--- a/index.html
+++ b/index.html
@@ -90,6 +90,30 @@
      </style>
   </head>
   <body>
+     <!-- Mobile-friendly navbar adapted from example -->
+     <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <button type="button" class="btn btn-navbar"
+                        data-toggle="collapse" data-target=".nav-collapse">
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                </button>
+                <a class="brand" href="#">Bitstarter</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div><!--/.nav-collse -->
+            </div>
+        </div>
+    </div>
+
+
+
      <div class = "container">
         <div class = "row navigation">
            <div class = "span2 logo">
