--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
      <meta charset="utf-8">
      <title>My First Bitstarter</title>
-     <link type="text/css" rel="stylesheet"
-           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Bootstrap -->
+     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
      <style type="text/css">
        body {
          padding-top: 20px;
