Adapting index.html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,43 @@
      <!-- Bootstrap -->
      <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
      <style type="text/css">
-       body {
-         padding-top: 20px;
-         padding-bottom: 40px;
+       /* Large Desktops */
+       @media (min-width: 980px) {
+         body {
+           padding-top: 60px;
+         }
+         .linediv-l {
+           border-right: 1px white solid;
+         }
+         .linediv-r {
+           border-left: 1px white solid;
+         } 
        }
-       .container {
-         width: 960px;
+       /* Landscape phones and down: */
+       @media (max-width: 480px) {
+         .copy {
+           padding: 2.5% 10%;
+         }
+         .linediv-l {
+           border-bottom: 1px white solid;
+         }
+         .linediv-r {
+           border-top: 1px white sold;
+         }
+       }
+       /* All form factors */
+       /* Main Body and headings */
+       body {
+         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+       }
+       .heading, .subheading {
+         font-family: 'Ubuntu', Helvetica, Arial, sans-serif; 
+         text-align: center;
        }
        p.lead {
-         padding-top: 15px;
+         padding-top: 1.5%;
+         font-size: 24px;
+         line-height: 30px;
        }
        .navigation, .pitch, .section1, .section2, .faq, .footer {
          padding: 10px 0px 10px 0px;
