--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        @media (min-width: 980px)
        {
          body {
-           padding-top: 60px;
+           padding-top: 20px;
          }
          .linediv-l {
            border-right: 1px white solid;
@@ -92,26 +92,23 @@
   <body>
      <!-- Mobile-friendly navbar adapted from example -->
      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <button type="button" class="btn btn-navbar"
-                        data-toggle="collapse" data-target=".nav-collapse">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                </button>
-                <a class="brand" href="#">Bitstarter</a>
-                <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div><!--/.nav-collse -->
-            </div>
-        </div>
+       <div class="container">
+          <button type="button" class="navbar-toggle" 
+                  data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
+        <div class="nav-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
-
 
 
      <div class = "container">
