--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
      </style>
   </head>
   <body>
+   <div class="container">
      <!-- Mobile-friendly navbar adapted from example -->
      <div class="navbar navbar-inverse navbar-fixed-top">
        <div class="container">
-          <button type="button" class="navbar-toggle" 
+          <button type="button" class="navbar-toggle"
                   data-toggle="collapse" data-target=".nav-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -107,10 +108,12 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-
+     </div>
+     <div class="jumbotron">
+        <h1>Product</h1>
+        <p class="lead">One sentence description.</p>
+     </div>
+   </div>
      <div class = "container">
         <div class = "row navigation">
            <div class = "span2 logo">
